--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>El Mundo del VR</title>
-    <link rel="stylesheet" type="text/css" href="SiteStyle/global.css"/>
+    <link rel="stylesheet" type="text/css" href="global.css"/>
 </head>
 <body>
     <div id="container">
