--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div id="header">
             <div id="nav">
 <h1>El Mundo del VR</h1>
-<img src="SiteImage/Man%20with%20VR%20headset.png" width="700" height="300"/>
+<img src="Man%20with%20VR%20headset.png" width="700" height="300"/>
                 
     <h3><p>Al hablar de Realidad Virtual o Virtual Reality, a muchos nos vienen a la cabeza películas de ciencia ficción. Sin embargo, lo cierto es que hoy en día es una tecnología totalmente mimetizada con nuestra vida diaria. Videojuegos, medicina, educación, etc. La Realidad Virtual ha llegado para quedarse. Pero, ¿en qué consiste exactamente?</p></h3>
     
